--- a/projects/personal-misc.html
+++ b/projects/personal-misc.html
@@ -387,7 +387,7 @@
                     <div class="project-skills">
                         <span class="skill-tag">3D Printing</span>
                         <span class="skill-tag">Rapid Prototyping</span>
-                        <span class="skill-tag">Design for Manufacturing/Assembly</span>
+                        <span class="skill-tag">DFM/DFA</span>
                     </div>
                 </div>
             </div>
