--- a/projects/index.html
+++ b/projects/index.html
@@ -569,14 +569,14 @@
                         <div class="tags-container"></div>
                     </div>
                 </a>
-                <a href="personal-pw.html" class="project-link">
+                <!-- <a href="personal-pw.html" class="project-link">
                     <div class="project-card" style="background-image: url('/projects/images/pw/pw-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Portfolio Website</h2>
                         <p class="project-description">Responsive portfolio website built with HTML, CSS, and JavaScript to showcase engineering projects.</p>
                         <div class="tags-container"></div>
                     </div>
-                </a>
+                </a> -->
                 <!-- <a href="personal-lr.html" class="project-link"> -->
                 <a href="inprogress.html" class="project-link">
                     <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
