--- a/projects/personal-misc.html
+++ b/projects/personal-misc.html
@@ -191,6 +191,18 @@
                 font-size: 12px;
                 color: var(--accent-color);
             }
+
+            .footer {
+                margin-top: 40px;
+                padding-top: 20px;
+                border-top: 1px solid var(--line-color-light);
+                font-size: 14px;
+                transition: border-color 0.3s;
+            }
+
+            body.dark-mode .footer {
+                border-top-color: var(--line-color-dark);
+            }
     
             .sidenav {
                 position: fixed;
@@ -480,6 +492,17 @@
         </div>
     </main>
 
+    <footer class="footer">
+        <p style="text-align:left;">
+            Made by Terry Yu
+            <span style="float:right;">
+                <i>
+                    last updated Nov 2024
+                </i>
+            </span>
+        </p>
+    </footer>
+    
     <script>
         const toggleButton = document.getElementById('theme-toggle');
         const body = document.body;
