--- a/projects/research-pdmsch.html
+++ b/projects/research-pdmsch.html
@@ -423,10 +423,10 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>These Xenopus eggs often come in hundreds/thousands of them, and there's often some that 
-                    are useless and need to be filtered out, so previously researchers have done this by hand. 
+                <p>Xenopus eggs often come in batches of hundred/thousands, and each egg needs to be checked and filtered out 
+                    if they're useless. This was previously done manually, with hours of tedious labor.
                     As the sole mechanical engineer, I designed the hardware components for this mechatronics project,
-                    which automates this sorting process, saving many hours of work.
+                    which automates this sorting process.
                 </p>
             </div>            
         </section>
