--- a/projects/clubs-hfc.html
+++ b/projects/clubs-hfc.html
@@ -507,6 +507,9 @@
                     <div class="image-container">
                         <img src="im13.png" alt="Image">
                     </div>
+                    <div class="image-container">
+                        <img src="im15.png" alt="Image">
+                    </div>
                 </div>
                 <div class="image-column">
                     <div class="image-container">
@@ -517,6 +520,9 @@
                     </div>
                     <div class="image-container">
                         <img src="im10.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im16.png" alt="Image">
                     </div>
                 </div>
                 <div class="image-column">
