--- a/projects/index.html
+++ b/projects/index.html
@@ -542,6 +542,15 @@
         <div class="project-section" id="personal-section">
             <h2>Personal Projects</h2>
             <div class="projects-grid">
+                <a href="personal-sbr.html" class="project-link">
+                    <div class="project-card" style="background-image: url('/projects/images/egk/sbr-cover.png')">
+                        <span class="project-year">2025</span>
+                        <h2 class="project-title">Self Balancing Robot</h2>
+                        <p class="project-description">Cute compact self balancing robot featuring PID control.</p>
+                        <span class="resume-star">★</span>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
                 <a href="personal-pp.html" class="project-link">
                     <div class="project-card" style="background-image: url('/projects/images/pp/pp-cover.png')">
                         <span class="project-year">2024</span>
@@ -565,7 +574,7 @@
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Fingerprint Dorm Unlocker</h2>
                         <p class="project-description">Arduino-based fingerprint authentication system for automated door unlocking.</p>
-                        <span class="resume-star">★</span>
+                        <!-- <span class="resume-star">★</span> -->
                         <div class="tags-container"></div>
                     </div>
                 </a>
