--- a/projects/personal-sbr.html
+++ b/projects/personal-sbr.html
@@ -140,7 +140,7 @@
             border-bottom: 1px solid var(--line-color-light);
             font-weight: normal;
         }
-/* i love my pigoo*/
+
         body.dark-mode .toc-title {
             border-bottom-color: var(--line-color-dark);
         }
@@ -190,12 +190,39 @@
             line-height: 1.6;
         }
 
-        .section-content ul {
-            padding-left: 20px;
+        .image-grid {
+            display: flex;
+            gap: 8px;
+            margin-top: 20px;
+            width: 100%;
+            justify-content: space-between;
         }
 
-        .section-content li {
-            margin-bottom: 8px;
+        .image-column {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .image-container {
+            width: 100%;
+            border: 1px solid var(--text-color-light);
+            transition: border-color 0.3s ease, transform 0.2s ease;
+        }
+
+        body.dark-mode .image-container {
+            border-color: var(--text-color-dark);
+        }
+
+        .image-container:hover {
+            transform: scale(1.02);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: auto;
+            display: block;
         }
 
         .footer {
@@ -260,7 +287,6 @@
             transform: scale(1.1) !important;
         }
 
-
         .theme-toggle {
             position: absolute;
             bottom: 20px;
@@ -288,6 +314,63 @@
             color: var(--text-color-dark);
         }
 
+        .gallery-container {
+            width: 80%;
+            margin: 0 auto; 
+            position: relative;
+        }
+
+
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            margin: 20px 0;
+            width: 100%; 
+        }
+
+        .gallery-item {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .gallery-image {
+            width: 100%;
+            height: auto;
+            border: 1px solid var(--text-color-light);
+            transition: transform 0.2s ease;
+            display: block;
+        }
+
+        body.dark-mode .gallery-image {
+            border-color: var(--text-color-dark);
+        }
+
+        .gallery-image:hover {
+            transform: scale(1.02);
+        }
+
+        .gallery-caption {
+            text-align: center;
+            font-size: 14px;
+            color: var(--text-color-light);
+        }
+
+        body.dark-mode .gallery-caption {
+            color: var(--text-color-dark);
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        @media screen and (max-width: 1200px) {
+            .gallery-container {
+                width: 90%;
+            }
+        }
+
         @media screen and (max-width: 768px) {
             body {
                 padding: 15px;
@@ -295,12 +378,28 @@
                 padding-bottom: 80px;
             }
 
+            .gallery-container {
+                width: 100%;
+            }
+
+            .gallery-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .image-grid {
+                flex-direction: column;
+            }
+
+            .image-column {
+                width: 100%;
+            }
+
             .back-button {
                 left: 30px;
                 position: fixed;
-                /* display: inline-flex; */
                 margin-bottom: 20px;
             }
+
             .project-header {
                 padding-top: 10px;
             }
@@ -343,6 +442,7 @@
             }
         }
     </style>
+    <base href="images/sbr/" />
 </head>
 <body>
     <a href="/projects/" class="back-button">
@@ -365,15 +465,15 @@
         <a href="/notes/">NOTES</a>
     </nav>
 
-    <nav class="table-of-contents">
-        <!-- <h2 class="toc-title">Jump To</h2> -->
+    <!-- <nav class="table-of-contents">
+        <h2 class="toc-title">Jump To</h2>
         <ul class="toc-list">
             <li><a href="#problem">Description</a></li>
             <li><a href="#work">My Work</a></li>
             <li><a href="#results">Results</a></li>
             <li><a href="#lessons">Lessons Learned</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <main>
         <header class="project-header">
@@ -382,7 +482,9 @@
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
                     <span class="skill-tag">Arduino Nano</span>
-                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">Soldering</span>
+                    <span class="skill-tag">Product Design</span>
+                    <span class="skill-tag">Surface Modeling</span>
                 </div>
             </div>
         </header>
@@ -390,22 +492,22 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <p>Building a cute compact self balancing robot</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
-                <ul>
+                <p>Wanted to make it as small as possible -- so first started off by doing some short hand calculations on the specs of motor and microcontrollers that I need.</p>
+                <!-- <ul>
                     <li>FILLERWORK</li>
                     <li>FILLERWORK</li>
-                </ul>
+                </ul> -->
             </div>
         </section>
 
-        <section id="results" class="content-section">
+        <!-- <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
                 <p>FILLERDESCRIPTION</p>
@@ -414,16 +516,59 @@
                     <li>FILLERRESULTS</li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
-                <ul>
+                <p>Learned a lot on circuit design, how circuit theory is applied in real life, and designing around mounting and placement of electrical systems. Also touched into control theory with PID control.</p>
+                <!-- <ul>
                     <li>FILLERLESSON</li>
                     <li>FILLERLESSON</li>
-                </ul>
+                </ul> -->
+            </div>
+        </section>
+
+        <section id="images" class="content-section">
+            <h2 class="section-title">Images</h2>
+            <div class="section-content">
+                <p>More pictures coming soon!</p>
+            </div>
+            <div class="image-grid">
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="sbr-cover.png" alt="Image">
+                    </div>
+                    <!-- <div class="image-container">
+                        <img src="im1.png" alt="Image">
+                    </div> -->
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im1.png" alt="Image">
+                    </div>
+                    <!-- <div class="image-container">
+                        <img src="im5.png" alt="Image 5">
+                    </div> -->
+                </div>
+                <div class="image-column">
+                    <!-- <div class="image-container">
+                        <img src="im2.png" alt="Image">
+                    </div> -->
+                </div>
+                <div class="image-column">
+                    <!-- <div class="image-container">
+                        <img src="im3.png" alt="Image 5">
+                    </div> -->
+                </div>
+                <!-- <div class="image-column">
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/250" alt="Image 10">
+                    </div>
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/300" alt="Image 11">
+                    </div>
+                </div> -->
             </div>
         </section>
     </main>
