--- a/projects/personal-sbr.html
+++ b/projects/personal-sbr.html
@@ -552,14 +552,14 @@
                     </div> -->
                 </div>
                 <div class="image-column">
-                    <!-- <div class="image-container">
+                    <div class="image-container">
                         <img src="im2.png" alt="Image">
-                    </div> -->
+                    </div>
                 </div>
                 <div class="image-column">
-                    <!-- <div class="image-container">
+                    <div class="image-container">
                         <img src="im3.png" alt="Image 5">
-                    </div> -->
+                    </div>
                 </div>
                 <!-- <div class="image-column">
                     <div class="image-container">
