--- a/projects/old_layout/personal-fdu.html
+++ b/projects/old_layout/personal-fdu.html
@@ -5,331 +5,7 @@
     <title>FILLER | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
-    <style>
-        :root {
-            --bg-color-light: #ffffff;
-            --text-color-light: #333333;
-            --bg-color-dark: #121212;
-            --text-color-dark: #dddddd;
-            --line-color-light: #000000;
-            --line-color-dark: #ffffff;
-            --border-color: #e0e0e0;
-            --accent-color: #e63946;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Georgia, Garamond;
-        }
-
-        body {
-            background-color: var(--bg-color-light);
-            color: var(--text-color-light);
-            padding: 30px;
-            padding-left: 90px;
-            max-width: 1200px;
-            margin: 0 auto;
-            line-height: 1.6;
-            transition: background-color 0.3s, color 0.3s;
-            font-family: Georgia, Garamond;
-            font-weight: 400;
-        }
-
-        body.dark-mode {
-            background-color: var(--bg-color-dark);
-            color: var(--text-color-dark);
-        }
-
-        .back-button {
-            position: fixed;
-            top: 30px;
-            left: 90px;
-            padding: 5px 10px;
-            background-color: var(--bg-color-light);
-            border: 1px solid var(--text-color-light);
-            color: var(--text-color-light);
-            text-decoration: none;
-            font-size: 12px;
-            transition: all 0.2s ease;
-            z-index: 3;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            border-radius: 15px;
-        }
-
-        body.dark-mode .back-button {
-            border-color: var(--text-color-dark);
-            color: var(--text-color-dark);
-            background-color: var(--bg-color-dark);
-        }
-
-        .back-button:hover {
-            transform: scale(1.05);
-        }
-
-        .back-button svg {
-            width: 14px;
-            height: 14px;
-        }
-
-        .project-header {
-            margin-bottom: 40px;
-            border-bottom: 1px solid var(--line-color-light);
-            padding-top: 70px;
-            padding-bottom: 20px;
-        }
-
-        .project-title {
-            font-size: 20px;
-            margin-bottom: 20px;
-            font-weight: bold;
-            letter-spacing: 0.5px;
-        }
-
-        .skills-section {
-            margin-bottom: 30px;
-        }
-
-        .skills-title {
-            font-size: 14px;
-            margin-bottom: 10px;
-            font-weight: normal;
-        }
-
-        .skills-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .skill-tag {
-            padding: 5px 12px;
-            border: 1px solid var(--accent-color);
-            border-radius: 15px;
-            font-size: 12px;
-            color: var(--accent-color);
-        }
-
-        .table-of-contents {
-            position: fixed;
-            top: 30px;
-            right: 30px;
-            width: 160px;
-            padding: 16px;
-            background-color: var(--bg-color-light);
-            border: 1px solid var(--line-color-light);
-            border-radius: 8px;
-            transition: background-color 0.3s;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        body.dark-mode .table-of-contents {
-            background-color: var(--bg-color-dark);
-            border-color: var(--line-color-dark);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .toc-title {
-            font-size: 14px;
-            margin-bottom: 16px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid var(--line-color-light);
-            font-weight: normal;
-        }
-/* i love my pigoo*/
-        body.dark-mode .toc-title {
-            border-bottom-color: var(--line-color-dark);
-        }
-
-        .toc-list {
-            list-style: none;
-        }
-
-        .toc-list li {
-            margin-bottom: 7px;
-        }
-
-        .toc-list a {
-            color: var(--text-color-light);
-            text-decoration: none;
-            font-size: 14px;
-            transition: color 0.2s;
-        }
-
-        body.dark-mode .toc-list a {
-            color: var(--text-color-dark);
-        }
-
-        .toc-list a:hover {
-            text-decoration: underline;
-        }
-
-        .content-section {
-            margin-bottom: 40px;
-            scroll-margin-top: 30px;
-        }
-
-        .section-title {
-            font-size: 16px;
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid var(--line-color-light);
-            font-weight: normal;
-        }
-
-        body.dark-mode .section-title {
-            border-bottom-color: var(--line-color-dark);
-        }
-
-        .section-content {
-            font-size: 14px;
-            line-height: 1.6;
-        }
-
-        .section-content ul {
-            padding-left: 20px;
-        }
-
-        .section-content li {
-            margin-bottom: 8px;
-        }
-
-        .sidenav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 60px;
-            border-right: 1px solid var(--line-color-light);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 30px;
-            background: var(--bg-color-light);
-            z-index: 2;
-        }
-
-        body.dark-mode .sidenav {
-            background-color: var(--bg-color-dark);
-            border-right-color: var(--line-color-dark);
-        }
-
-        .sidenav a {
-            writing-mode: vertical-rl;
-            transform: rotate(180deg);
-            text-decoration: none;
-            color: var(--text-color-light);
-            font-size: 14px;
-            transition: transform 0.2s;
-        }
-
-        body.dark-mode .sidenav a {
-            color: var(--text-color-dark);
-        }
-
-        .sidenav a:hover {
-            text-decoration: underline;
-            transform: rotate(180deg) scale(1.1);
-        }
-
-        .home-link {
-            position: absolute;
-            top: 20px;
-            writing-mode: horizontal-tb !important;
-            transform: none !important;
-        }
-
-        .home-link:hover {
-            transform: scale(1.1) !important;
-        }
-
-        .theme-toggle {
-            position: absolute;
-            bottom: 20px;
-            cursor: pointer;
-            background-color: var(--bg-color-light);
-            color: var(--text-color-light);
-            font-size: 16px;
-            border: 1px solid var(--line-color-light);
-            padding: 8px 12px;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .theme-toggle.hover {
-            transform: rotate(10deg);
-            transition: transform 0.3s ease, background-color 0.3s ease;
-        }
-
-        .theme-toggle.clicked {
-            transform: scale(1.3);
-        }
-
-        .theme-toggle.dark-mode {
-            background-color: var(--bg-color-dark);
-            color: var(--text-color-dark);
-        }
-
-        @media screen and (max-width: 768px) {
-            body {
-                padding: 15px;
-                padding-left: 15px;
-                padding-bottom: 80px;
-            }
-
-            .back-button {
-                left: 30px;
-                position: fixed;
-                /* display: inline-flex; */
-                margin-bottom: 20px;
-            }
-            .project-header {
-                padding-top: 10px;
-            }
-
-            .table-of-contents {
-                position: static;
-                width: 100%;
-                margin-top: 70px;
-                margin-bottom: 30px;
-                border-radius: 0;
-                box-shadow: none;
-                border-left: none;
-                border-right: none;
-            }
-
-            .sidenav {
-                height: 60px;
-                width: 100%;
-                bottom: 0;
-                top: auto;
-                flex-direction: row;
-                border-right: none;
-                border-top: 1px solid var(--line-color-light);
-            }
-
-            .sidenav a {
-                writing-mode: horizontal-tb;
-                transform: none;
-            }
-
-            .home-link {
-                left: 20px;
-                top: auto;
-            }
-
-            .theme-toggle {
-                right: 20px;
-                vertical-align: middle;
-                bottom: auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/project-styles.css">
 </head>
 <body>
     <a href="/projects/" class="back-button">
@@ -429,44 +105,6 @@
         </section>
     </main>
 
-    <script>
-      const toggleButton = document.getElementById('theme-toggle');
-        const body = document.body;
-        let cantoggle = true;
-
-        toggleButton.addEventListener('click', () => {
-            toggleButton.classList.add('clicked');
-            setTimeout(() => {
-                toggleButton.classList.remove('clicked');
-            }, 100);
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 160);
-
-            cantoggle = false;
-        });
-
-        toggleButton.addEventListener('mouseover', () => {
-            toggleButton.classList.add('hover');
-
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-        });
-
-        toggleButton.addEventListener('mouseout', () => {    
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 100);
-
-            cantoggle = true;
-        });
-    </script>
+    <script src="/scripts/theme-toggle.js"></script>
 </body>
 </html>
