--- a/projects/clubs-mk10s&c.html
+++ b/projects/clubs-mk10s&c.html
@@ -109,6 +109,9 @@
                     <div class="image-container">
                         <img src="im1.png" alt="Image">
                     </div>
+                    <div class="image-container">
+                        <img src="im10.png" alt="Image">
+                    </div>
                 </div>
                 <div class="image-column">
                     <div class="image-container">
@@ -116,6 +119,9 @@
                     </div>
                     <div class="image-container">
                         <img src="im4.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im11.png" alt="Image">
                     </div>
                 </div>
                 <div class="image-column">
@@ -157,7 +163,7 @@
             Made by Terry Yu
             <span style="float:right;">
                 <i>
-                    last updated Nov 2024
+                    last updated Mar 2025
                 </i>
             </span>
         </p>
