--- a/projects/projtemplate.html
+++ b/projects/projtemplate.html
@@ -95,7 +95,7 @@
             Made by Terry Yu
             <span style="float:right;">
                 <i>
-                    last updated Nov 2024
+                    last updated 20XX
                 </i>
             </span>
         </p>
