--- a/projects/index.html
+++ b/projects/index.html
@@ -636,6 +636,15 @@
         const body = document.body;
         let cantoggle = true;
 
+        // Initialize theme from localStorage on page load
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme === 'dark') {
+            body.classList.add('dark-mode');
+            toggleButton.textContent = '🌚';
+        } else {
+            toggleButton.textContent = '🌞';
+        }
+
         toggleButton.addEventListener('click', () => {
             toggleButton.classList.add('clicked');
             setTimeout(() => {
@@ -654,6 +663,8 @@
             if(cantoggle) {
                 body.classList.toggle('dark-mode');
                 toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+                // Save theme preference
+                localStorage.setItem('theme', body.classList.contains('dark-mode') ? 'dark' : 'light');
             }
         });
 
@@ -661,6 +672,8 @@
             if(cantoggle) {
                 body.classList.toggle('dark-mode');
                 toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+                // Save theme preference
+                localStorage.setItem('theme', body.classList.contains('dark-mode') ? 'dark' : 'light');
             }
 
             setTimeout(() => {
