--- a/notes/index.html
+++ b/notes/index.html
@@ -509,6 +509,15 @@
         const body = document.body;
         let cantoggle = true;
 
+        // Initialize theme from localStorage on page load
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme === 'dark') {
+            body.classList.add('dark-mode');
+            toggleButton.textContent = '🌚';
+        } else {
+            toggleButton.textContent = '🌞';
+        }
+
         toggleButton.addEventListener('click', () => {
             toggleButton.classList.add('clicked');
             setTimeout(() => {
@@ -526,24 +535,18 @@
 
             if(cantoggle) {
                 body.classList.toggle('dark-mode');
-
-                if (body.classList.contains('dark-mode')) {
-                    toggleButton.textContent = '🌚';
-                } else {
-                    toggleButton.textContent = '🌞';
-                }
+                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+                // Save theme preference
+                localStorage.setItem('theme', body.classList.contains('dark-mode') ? 'dark' : 'light');
             }
         });
         
         toggleButton.addEventListener('mouseout', () => {    
             if(cantoggle) {
                 body.classList.toggle('dark-mode');
-
-                if (body.classList.contains('dark-mode')) {
-                    toggleButton.textContent = '🌚';
-                } else {
-                    toggleButton.textContent = '🌞';
-                }
+                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+                // Save theme preference
+                localStorage.setItem('theme', body.classList.contains('dark-mode') ? 'dark' : 'light');
             }
 
             setTimeout(() => {
