--- a/projects/inprogress.html
+++ b/projects/inprogress.html
@@ -82,6 +82,10 @@
             padding-bottom: 20px;
         }
 
+        body.dark-mode .project-header {
+            border-color: var(--line-color-dark);
+        }
+
         .project-title {
             font-size: 20px;
             margin-bottom: 20px;
@@ -339,44 +343,7 @@
         </section>
     </main>
 
-    <script>
-        const toggleButton = document.getElementById('theme-toggle');
-        const body = document.body;
-        let cantoggle = true;
+    <script src="/scripts/theme-toggle.js"></script>
 
-        toggleButton.addEventListener('click', () => {
-            toggleButton.classList.add('clicked');
-            setTimeout(() => {
-                toggleButton.classList.remove('clicked');
-            }, 100);
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 160);
-
-            cantoggle = false;
-        });
-
-        toggleButton.addEventListener('mouseover', () => {
-            toggleButton.classList.add('hover');
-
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-        });
-
-        toggleButton.addEventListener('mouseout', () => {    
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 100);
-
-            cantoggle = true;
-        });
-    </script>
 </body>
 </html>
